--- a/Becoming_a_Designer_Values_and_Mindset.html
+++ b/Becoming_a_Designer_Values_and_Mindset.html
@@ -11,7 +11,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-     <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
+     <title>Dum3bi- Designing a Designer; My Thoughts on Design Education.</title>
      <meta name="description" content="Dumebi Iwuchukwu is an Art Director, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
      <meta name="theme-color" content="#f91e15"/>
 
@@ -89,7 +89,7 @@
 
         <!-- page header/blog hero
         ================================================== -->
-        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/balazs-ketyi-_x335IZXxfc-unsplash.jpg)">
+        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/blog-bg-04.png)">
 
             <div class="row page-header__content narrow">
                 <article class="col-full">
@@ -98,8 +98,8 @@
                     </div>
                     <h1 class="page-header__title">
                         <a href="#0" title="">
-                            Designing a Designer; <br />
-                            My Thoughts on Design Education.
+                            Becoming a Designer; <br />
+                            Values and Mindset
                         </a>
                     </h1>
                     <ul class="page-header__meta">
@@ -118,93 +118,40 @@
         <div class="row blog-content">
             <div class="col-full blog-content__main">
                <br />
-                <p class="lead">Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint.</p>
+                <p class="lead">Thankfully when I started designing in 2012 my focus was more about 'becoming' a designer than learning design tools.
 
-                <p>Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint ut quis proident ullamco ut dolore culpa occaecat ut laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.
-                </p>
+                               I really wanted to learn how the designers I admired thought and came up with their ideas. I'll share a bit about what I've learnt over those ten years.
 
-                <p>
-                <img src="images/wheel-1000.jpg"
-                     srcset="images/wheel-2000.jpg 2000w,
-                        images/wheel-1000.jpg 1000w,
-                        images/wheel-500.jpg 500w"
-                     sizes="(max-width: 2000px) 100vw, 2000px" alt="">
-                </p>
+.</p>
 
-                <h2>Large Heading</h2>
+
+
+
+
+                <h2>Be Humble</h2>
 
                 <p>Harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus <a href="https://#">omnis voluptas assumenda est</a> id quod maxime placeat facere possimus, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et.</p>
 
-                <blockquote><p>This is a simple example of a styled blockquote. A blockquote tag typically specifies a section that is quoted from another source of some sort, or highlighting text in your post.</p></blockquote>
+                <blockquote><p>You only learn by listening, not by talking. So it really pays to ask a lot of questions, listen and seek to understand the answers you get.</p></blockquote>
 
                 <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
 
-                <h3>Smaller Heading</h3>
-
-                <p>Dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.
-
-<pre><code>
-code {
-    font-size: 1.4rem;
-    margin: 0 .2rem;
-    padding: .2rem .6rem;
-    white-space: nowrap;
-    background: #F1F1F1;
-    border: 1px solid #E1E1E1;
-    border-radius: 3px;
-}
-</code></pre>
-
-                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa.</p>
-
-                <ul>
-                    <li>Donec nulla non metus auctor fringilla.
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                        </ul>
-                    </li>
-                    <li>Donec nulla non metus auctor fringilla.</li>
-                    <li>Donec nulla non metus auctor fringilla.</li>
-                </ul>
-
-                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
-
-                <p class="blog-content__tags">
-                    <span>Post Tags</span>
-
-                    <span class="blog-content__tag-list">
-                        <a href="#0">orci</a>
-                        <a href="#0">lectus</a>
-                        <a href="#0">varius</a>
-                        <a href="#0">turpis</a>
-                    </span>
-
+                <h2>Be Curious</h2>
+                <p>Asking the right questions help make sure you are trying to solve the right problem using the right procedure. Another critical skill is listening... not waiting for the person speaking to stop but active, intentional listening. Approaching the brief with a diagnostic mindset
                 </p>
 
-                <div class="blog-content__pagenav">
-                    <div class="blog-content__nav">
-                        <div class="blog-content__prev">
-                            <a href="#0" rel="prev">
-                                <span>Previous Post</span>
-                                Tips on Minimalist Design
-                            </a>
-                        </div>
-                        <div class="blog-content__next">
-                            <a href="#0" rel="next">
-                                <span>Next Post</span>
-                                Less Is More
-                            </a>
-                        </div>
-                    </div>
+                 <h2>Own your Ignorance</h2>
 
-                    <div class="blog-content__all">
-                        <a href="blog.html" class="btn btn--primary">
-                            View All Posts
-                        </a>
-                    </div>
-                </div>
+
+
+                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
+
+                  <h2>Express your Creativity</h2>
+
+
+                <p>Be sure to use properly formed table markup with <code>&lt;thead&gt;</code> and <code>&lt;tbody&gt;</code> when building a <code>table</code>.</p>
+
+
 
             </div><!-- end blog-content__main -->
         </div> <!-- end blog-content -->
@@ -215,55 +162,52 @@ code {
     <!-- footer
     ================================================== -->
     <footer>
-            <div class="row">
-                <div class="col-full">
+        <div class="row">
+            <div class="col-full">
 
-                    <div class="footer-logo">
-                        <a class="footer-site-logo" href="#0"><img src="images/logo.svg" alt="Homepage"></a>
-                    </div>
+                <div class="footer-logo">
+                    <a class="footer-site-logo" href="#top"><img src="images\logo-black.png" alt="Homepage"></a>
+                </div>
 
-                    <ul class="footer-social">
-                    <li><a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank" rel="noopener">
-                        <i class="im im-facebook" aria-hidden="true"></i>
-                        <span>Facebook</span>
-                    </a></li>
-                    <li><a href="https://twitter.com/dum3bi" target="_blank" rel="noopener">
-                        <i class="im im-twitter" aria-hidden="true"></i>
-                        <span>Twitter</span>
+                <ul class="footer-social">
+                  <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener">
+                      <i class="im im-linkedin" aria-hidden="true"></i>
+                      <span>Linkedin</span>
+                  </a></li>
+                  <li><a href="https://www.twitter.com/dum3bi" target="_blank" rel="noopener">
+                      <i class="im im-twitter" aria-hidden="true"></i>
+                      <span>twitter</span>
+                  </a></li>
+                    <li><a href="https://github.com/dum3bi" target="_blank" rel="noopener">
+                        <i class="im im-github" aria-hidden="true"></i>
+                        <span>Github</span>
                     </a></li>
                     <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
-                    <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
-                        <i class="im im-behance" aria-hidden="true"></i>
-                        <span>Behance</span>
-                    </a></li>
-                    <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener">
-                        <i class="im im-linkedin" aria-hidden="true"></i>
-                        <span>Linkedin</span>
-                    </a></li>
-                    </ul>
+                </ul>
 
+            </div>
+        </div>
+
+        <div class="row footer-bottom">
+
+            <div class="col-twelve">
+                <div class="copyright">
+                  <div>Content © 2022 Dumebi Iwuchukwu 神は私の人生をリードします</div>
+                  <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Hosted on <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
+                  <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
+                </div>
+
+                <div class="go-top">
+                <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
                 </div>
             </div>
 
-            <div class="row footer-bottom">
+        </div> <!-- end footer-bottom -->
 
-                <div class="col-twelve">
-                  <div class="copyright">
-                    <div>Copyright © 2019 Dumebi Iwuchukwu</div>
-                    <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
-                  </div>
-
-                    <div class="go-top">
-                    <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
-                    </div>
-                </div>
-
-            </div> <!-- end footer-bottom -->
-
-        </footer> <!-- end footer -->
+    </footer> <!-- end footer -->
 
 
         <div id="preloader">
