--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
    <!-- home
    ================================================== -->
-   <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+   <section id="home" class="s-home page-hero target-section" data-parallax="scroll"  data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
@@ -113,15 +113,11 @@
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
                  Head of Design at Big Cabal Media.<br>
-                 I design brands, products, and experiences.
+                 I lead teams that design brands, products, and experiences.
                </h1>
              </div>
 
-             <div class="home-content__scroll">
-                 <a href="#about" class="scroll-link smoothscroll">
-                     <span>Scroll Down</span>
-                 </a>
-             </div>
+
 
 
             </div>
@@ -152,261 +148,8 @@
 
 
 
-    <!-- works
-    ================================================== -->
-
-    <section id="portfolio" class="s-works target-section">
-
-        <div class="row narrow section-intro has-bottom-sep">
-            <div class="col-full">
-                <h1>Portfolio</h1>
-            </div>
-        </div>
-        <div class="row portfolio-content">
-
-    <div class="col-twelve">
-
-      <!-- portfolio-wrapper -->
-         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
-
-           <div class="bgrid folio-item">
-              <div class="item-wrap">
-               <img src="images/portfolio/gallery/OneBank.jpg" alt="OneBank Movie poster design" class="lazyload">
-                 <a href="#modal-05" class="overlay">
-                    <div class="folio-item-table">
-                     <div class="folio-item-cell">
-                       <h3 class="folio-title">OneBank</h3>
-                     <span class="folio-types">
-                         Brand & Marketing Design
-                     </span>
-                  </div>
-                    </div>
-                 </a>
-              </div>
-           </div> <!-- /folio-item -->
-
-           <div class="bgrid folio-item">
-              <div class="item-wrap">
-               <img src="images\portfolio\gallery\Budweiser.jpg" alt="Budweiser bottle with floating cap" class="lazyload">
-                 <a href="#modal-04" class="overlay">
-                    <div class="folio-item-table">
-                     <div class="folio-item-cell">
-                       <h3 class="folio-title">Budweiser</h3>
-                     <span class="folio-types">
-                         Brand & Marketing Design
-                     </span>
-                  </div>
-                    </div>
-                 </a>
-              </div>
-           </div> <!-- /folio-item -->
-
-           <div class="bgrid folio-item">
-              <div class="item-wrap">
-               <img src="images\portfolio\gallery\Nivea.jpg" alt="Nivea men flatlay" class="lazyload">
-                 <a href="#modal-06" class="overlay">
-                    <div class="folio-item-table">
-                     <div class="folio-item-cell">
-                       <h3 class="folio-title">NIVEA MEN</h3>
-                     <span class="folio-types">
-                       Social media design
-                     </span>
-                  </div>
-                    </div>
-                 </a>
-              </div>
-           </div> <!-- /folio-item -->
-
-           <div class="bgrid folio-item">
-                <div class="item-wrap">
-                 <img src="images\portfolio\gallery\Skatedeck_challenge.jpg" alt="dentiti baseball cap" class="lazyload">
-                   <a href="#modal-01" class="overlay">
-                      <div class="folio-item-table">
-                       <div class="folio-item-cell">
-                        <h3 class="folio-title">Skatedeck Challenge</h3>
-                        <span class="folio-types">
-                           Art direction and Graphic design
-                        </span>
-                    </div>
-                      </div>
-                   </a>
-                </div>
-             </div> <!-- /folio-item -->
 
 
-
-
-             <div class="bgrid folio-item">
-                <div class="item-wrap">
-                 <img src="images\portfolio\gallery\Schweppes.jpg"alt="hand holding glass of Schweppes" class="lazyload">
-                   <a href="#modal-02" class="overlay">
-                      <div class="folio-item-table">
-                       <div class="folio-item-cell">
-                         <h3 class="folio-title">Schweppes</h3>
-                       <span class="folio-types">
-                           Art Direction & Marketing Design
-                       </span>
-                    </div>
-                      </div>
-                   </a>
-                </div>
-             </div> <!-- /folio-item -->
-
-            <div class="bgrid folio-item">
-               <div class="item-wrap">
-                <img src="images\portfolio\gallery\selfie.jpg"alt="Dangote Pasta Pack ad" class="lazyload">
-                  <a href="#modal-03" class="overlay">
-                     <div class="folio-item-table">
-                      <div class="folio-item-cell">
-                        <h3 class="folio-title">Dangote Flour</h3>
-                      <span class="folio-types">
-                          Art Direction
-                      </span>
-                   </div>
-                     </div>
-                  </a>
-               </div>
-            </div> <!-- /folio-item -->
-
-            <!-- modal popups - begin
-            ============================================================= -->
-            <div id="modal-01" class="popup-modal slider mfp-hide">
-
-            <div class="media">
-              <img src="images/portfolio/modals/Skatedeck-m.png" alt="" />
-            </div>
-
-           <div class="description-box">
-              <h3>Skatedeck challenge</h3>
-              <p>A cross section designs I did combining my love for typography, grids and pop culture. Hope you enjoy these expressions...</p>
-
-              <div class="categories">Brand Identity, Apparel and Marketing Design</div>
-           </div>
-
-             <div class="link-box">
-                <a href="https://www.behance.net/gallery/97635239/Skate-Deck-Challenge-posters" target="_blank" rel="noopener">See Details</a>
-              <a href="#" class="popup-modal-dismiss">Close</a>
-             </div>
-
-         </div> <!-- /modal-02 -->
-
-         <div id="modal-02" class="popup-modal slider mfp-hide">
-
-         <div class="media">
-           <img src="images/portfolio/modals/schweppes-m.png" alt="" class="lazyload">
-         </div>
-
-         <div class="description-box">
-           <h3>Schweppes</h3>
-           <p>These are brand, product and marketing designs done for Schweppes Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
-
-           <div class="categories">Brand Identity, Apparel and Marketing Design</div>
-         </div>
-
-          <div class="link-box">
-             <a href="https://www.behance.net/gallery/111873105/Schweppes-Nigeria" target="_blank" rel="noopener">See Details</a>
-           <a href="#" class="popup-modal-dismiss">Close</a>
-          </div>
-
-        </div> <!-- /modal-02 -->
-
-
-         <div id="modal-03" class="popup-modal slider mfp-hide">
-
-            <div class="media">
-              <img src="images\portfolio\modals\dangote-selfie-m.jpg" alt="" class="lazyload">
-            </div>
-
-           <div class="description-box">
-              <h3>Dangote Flour</h3>
-              <p>Review of the designs i created as the art director on the team creating social media content for Dangote Flour's Social Media Account.</p>
-
-              <div class="categories">Art Direction</div>
-           </div>
-
-             <div class="link-box">
-                <a href="#" class="popup-modal-dismiss">See Details</a>
-              <a href="#" class="popup-modal-dismiss">Close</a>
-             </div>
-
-         </div> <!-- /modal-03 -->
-
-         <div id="modal-04" class="popup-modal slider mfp-hide">
-
-            <div class="media">
-              <img src="images\portfolio\modals\Budweiser-m.jpg" alt="budweiser label collage" class="lazyload">
-            </div>
-
-           <div class="description-box">
-              <h3>Budweiser</h3>
-              <p>These are brand, product and marketing designs done for Budweiser Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
-
-              <div class="categories">Brand, Product & Marketing Design</div>
-           </div>
-
-             <div class="link-box">
-                <a href="https://www.behance.net/gallery/94479803/Budweiser-Nigeria" target="_blank" rel="noopener">See Details</a>
-              <a href="#" class="popup-modal-dismiss">Close</a>
-             </div>
-
-         </div> <!-- /modal-04 -->
-
-         <div id="modal-05" class="popup-modal slider mfp-hide">
-
-            <div class="media">
-              <img src="images/portfolio/modals/OneBank-m.png" alt="OneBank_Flatlay" class="lazyload">
-            </div>
-
-           <div class="description-box">
-              <h3>OneBank</h3>
-              <p>These are brand, product and marketing designs done for OneBank. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
-
-              <div class="categories">Brand, Product & Marketing Design</div>
-           </div>
-
-             <div class="link-box">
-                <a href="#">See Details</a>
-              <a href="#" class="popup-modal-dismiss">Close</a>
-             </div>
-
-         </div> <!-- /modal-05 -->
-
-         <div id="modal-06" class="popup-modal slider mfp-hide">
-
-            <div class="media">
-              <img src="images\portfolio\modals\nivea-m.jpg" alt="flatlay" class="lazyload">
-            </div>
-
-           <div class="description-box">
-              <h3>Nivea</h3>
-              <p>A collection of Social Media designs and animations done for NIVEA MEN Nigeria's Facebook page.</p>
-
-              <div class="categories">Social Media Design</div>
-           </div>
-
-             <div class="link-box">
-                <a href="#" class="popup-modal-dismiss">See Details</a>
-              <a href="#" class="popup-modal-dismiss">Close</a>
-             </div>
-
-         </div> <!-- /modal-06 -->
-
-
-         <!-- modal popups - end
-            ============================================================= -->
-
-         </div> <!-- /portfolio-wrapper -->
-
-    </div>  <!-- /twelve -->
-
-  </div> <!-- /portfolio-content -->
-
-    </section>
-
-
-
-
-    
 
     <!-- footer
     ================================================== -->
