--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <nav class="header-nav-wrap">
             <ul class="header-nav">
                 <li><a href="about.html" target="_blank" title="about">Me</a></li>
-                <li><a class="smoothscroll"  href="#portfolio" title="works">Projects</a></li>
+                <li><a class="smoothscroll"  href="#portfolio" title="works">Portfolio</a></li>
                 <li><a href="scrapbook.html" target="_blank" title="Scapbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
             </ul>
@@ -123,24 +123,6 @@
             </div>
 
         </div> <!-- end home-content -->
-
-        <ul class="home-social">
-             <li>
-                <a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
-            </li>
-            <li>
-                <a href="https://www.twitter.com/dum3bi" target="_blank" rel="noopener"><i class="im im-twitter" aria-hidden="true"></i><span>twitter</span></a>
-            </li>
-            <li>
-                <a href="https://github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
-            </li>
-            <li>
-                <a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
-            </li>
-
-
-        </ul>
-        <!-- end home-social -->
 
     </section> <!-- end s-home -->
 
