--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="about.html"  title="about">Me</a></li>
+                <li><a href="me.html"  title="about">About</a></li>
                 <li><a class="smoothscroll"  href="#portfolio" title="works">Portfolio</a></li>
                 <li><a href="scrapbook.html" title="Scapbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
