--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-    <title>Dumebi Iwuchukwu</title>
+    <title>Portfolio | Dumebi Iwuchukwu</title>
     <meta name="description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
     <meta name="theme-color" content="#9849b1"/>
 
@@ -83,9 +83,9 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="about.html" target="_blank" title="about">Me</a></li>
-                <li><a class="smoothscroll"  href="#portfolio" title="works">Projects</a></li>
-                <li><a href="scrapbook.html" target="_blank" title="Scapbook">Scrapbook</a></li>
+                <li><a href="about.html" title="about">Me</a></li>
+                <li class="current"><a href="portfolio.html" title="Portfolio">work</a></li>
+                <li><a href="scrapbook.html"  title="Scapbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
             </ul>
         </nav>
