--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <nav class="header-nav-wrap">
             <ul class="header-nav">
                 <li><a href="me.html"  title="about">About</a></li>
-                <li><a class="smoothscroll"  href="#portfolio" title="works">Portfolio</a></li>
+                <li><a href="portfolio.html" title="works">Work</a></li>
                 <li><a href="scrapbook.html" title="Scapbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
             </ul>
