--- a/portfolio.html
+++ b/portfolio.html
@@ -83,6 +83,7 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
+                <li><a href="index.html#home" title="home">Home</a></li>
                 <li><a href="about.html" title="about">Me</a></li>
                 <li class="current"><a href="portfolio.html" title="Portfolio">work</a></li>
                 <li><a href="scrapbook.html"  title="Scapbook">Scrapbook</a></li>
@@ -95,58 +96,6 @@
     </header> <!-- end s-header -->
 
 
-   <!-- home
-   ================================================== -->
-   <section id="home" class="s-home page-hero target-section" data-parallax="scroll"  data-natural-width=3000 data-natural-height=2000 data-position-y=center>
-
-        <div class="overlay"></div>
-        <div class="shadow-overlay"></div>
-
-        <div class="home-content">
-
-            <div class="row home-content__main">
-
-
-
-
-             <div class="home-content__buttons">
-               <h1>
-                 Hi 👋🏼, I'm Dumebi, <br>
-                 Head of Design at Big Cabal Media.<br>
-                 I design brands, products, and experiences.
-               </h1>
-             </div>
-
-             <div class="home-content__scroll">
-                 <a href="#about" class="scroll-link smoothscroll">
-                     <span>Scroll Down</span>
-                 </a>
-             </div>
-
-
-            </div>
-
-        </div> <!-- end home-content -->
-
-        <ul class="home-social">
-             <li>
-                <a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
-            </li>
-            <li>
-                <a href="https://www.twitter.com/dum3bi" target="_blank" rel="noopener"><i class="im im-twitter" aria-hidden="true"></i><span>twitter</span></a>
-            </li>
-            <li>
-                <a href="https://github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
-            </li>
-            <li>
-                <a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
-            </li>
-
-
-        </ul>
-        <!-- end home-social -->
-
-    </section> <!-- end s-home -->
 
 
 
@@ -159,7 +108,7 @@
 
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
-                <h1>Portfolio</h1>
+                <h1 class="page-header__title">My Latest Projects.</h1>
             </div>
         </div>
         <div class="row portfolio-content">
@@ -402,7 +351,6 @@
   </div> <!-- /portfolio-content -->
 
     </section>
-
 
 
 
