--- a/scrapbook.html
+++ b/scrapbook.html
@@ -78,8 +78,8 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="about.html" target="_blank" title="about">Me</a></li>
-                <li><a href="index.html#works" title="works">Projects</a></li>
+                <li><a href="about.html"  title="about">Me</a></li>
+                <li><a href="portfolio.html" title="works">Work</a></li>
                 <li class="current"><a href="#" title="scrapbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
             </ul>
