--- a/offline.html
+++ b/offline.html
@@ -26,12 +26,12 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Dumebi Iwuchukwu | Art Director.">
   <meta property="og:description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
-  <meta property="og:image" content="https://www.dum3bi.com/images/logo-black.png">
+  <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
   <meta property="og:image:alt" content="Dumebi's logo">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Dumebi Iwuchukwu">
   <meta name="twitter:description" content="Working at the intersection of digital product design, advertising and brand identity, Dumebi has the privilege of creating enabling experiences for people.">
-  <meta name="twitter:image" content="https://www.dum3bi.com/images/logo-black.png">
+  <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
 
   <meta property="og:type" content="website">
 
@@ -76,7 +76,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="#top"><img src="images/logo-black.png" alt="Homepage"></a>
+            <a class="site-logo" href="#top"><img src="images/logo.svg" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -441,7 +441,7 @@
             <div class="col-full">
 
                 <div class="footer-logo">
-                    <a class="footer-site-logo" href="#top"><img src="images\logo-black.png" alt="Homepage"></a>
+                    <a class="footer-site-logo" href="#top"><img src="images\logo.svg" alt="Homepage"></a>
                 </div>
 
                 <ul class="footer-social">
