--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- CSS
     ================================================== -->
     <link rel="preload" href="css/fonts.css" as="style" />
-    <link rel="preload" href="css/iconic/css/iconmonstr-iconic-font.min.css" as="style" />
+    <link rel="stylesheet" href="css/iconic/css/iconmonstr-iconic-font.min.css" as="style" />
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
