--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS
+  
     ================================================== -->
     <link rel="preload" href="css/fonts.css" as="style" />
-    <link rel="stylesheet" href="css/iconic/css/iconmonstr-iconic-font.min.css" as="style" />
+    <link rel="stylesheet" href="css/iconic/css/iconmonstr-iconic-font.min.css"/>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
@@ -65,10 +65,7 @@
 
 
 
-    <!-- Cookie consent
-    ================================================== -->
 
-<link rel="stylesheet" type="text/css" href="//wpcc.io/lib/1.0.2/cookieconsent.min.css"/><script src="//wpcc.io/lib/1.0.2/cookieconsent.min.js"></script><script>window.addEventListener("load", function(){window.wpcc.init({"colors":{"popup":{"background":"#000000","text":"#ffffff","border":"#ffffff"},"button":{"background":"#ffffff","text":"#000000"}},"position":"bottom","border":"normal","corners":"normal","transparency":"5","content":{"href":"https://www.dum3bi.com/cookie-policy"}})});</script>
 </head>
 
 <body id="top">
