--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
   
-    ================================================== -->
     <link rel="preload" href="css/fonts.css" as="style" />
     <link rel="stylesheet" href="css/iconic/css/iconmonstr-iconic-font.min.css"/>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/base.min.css">
+    <link rel="stylesheet" href="css/vendor.min.css">
+    <link rel="stylesheet" href="css/main.min.css">
 
 
     <!-- script
