--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  
+    <!-- CSS
+    ================================================== -->
     <link rel="preload" href="css/fonts.css" as="style" />
     <link rel="stylesheet" href="css/iconic/css/iconmonstr-iconic-font.min.css"/>
     <link rel="stylesheet" href="css/base.min.css">
@@ -94,7 +95,7 @@
 
    <!-- home
    ================================================== -->
-   <section id="home" class="s-home page-hero target-section" data-parallax="scroll"  data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+   <section id="home" class="s-home page-hero target-section" >
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
