--- a/index.html
+++ b/index.html
@@ -238,16 +238,16 @@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
-    <script>
+    <script async>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'UA-133301768-1');
     </script>
-  <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+  <script src="js/jquery-3.2.1.min.js" ></script>
+    <script src="js/plugins.js" ></script>
+    <script src="js/main.js" ></script>
     <script src="js/lazysizes.min.js"></script>
 
 
