--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="col-full">
 
                 <div class="footer-logo">
-                    <a class="footer-site-logo" href="#top"><img src="images\logo.svg" alt="Homepage"></a>
+                    <a class="footer-site-logo" href="#top"><img src="images/logo.svg" alt="Homepage"></a>
                 </div>
 
                 <ul class="footer-social">
@@ -237,8 +237,8 @@
     </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
-    <script async>
+    <script src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
+    <script >
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
