--- a/me.html
+++ b/me.html
@@ -139,7 +139,7 @@
           <div class="col-full">
 
               <div class="footer-logo">
-                  <a class="footer-site-logo" href="#top"><img src="images\logo.svg" alt="Homepage"></a>
+                  <a class="footer-site-logo" href="#top"><img src="images/logo.svg" alt="Homepage"></a>
               </div>
 
               <ul class="footer-social">
