--- a/scrapbook.html
+++ b/scrapbook.html
@@ -250,7 +250,7 @@
           <div class="col-full">
 
               <div class="footer-logo">
-                  <a class="footer-site-logo" href="#top"><img src="images\logo.svg" alt="Homepage"></a>
+                  <a class="footer-site-logo" href="#top"><img src="images/logo.svg" alt="Homepage"></a>
               </div>
 
               <ul class="footer-social">
