--- a/scrapbook.html
+++ b/scrapbook.html
@@ -158,7 +158,7 @@
 
             </div>
             <div>
-              <img class='grid-item grid-item-9 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/quaker oats app.png' alt='' class="lazyload">
+              <img class='grid-item grid-item-9 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/quaker_oats_app.png' alt='' class="lazyload">
 
             </div>
             <div>
