--- a/portfolio.html
+++ b/portfolio.html
@@ -136,7 +136,7 @@
 
            <div class="bgrid folio-item">
               <div class="item-wrap">
-               <img src="images\portfolio\gallery\Budweiser.jpg" alt="Budweiser bottle with floating cap" class="lazyload">
+               <img src="images/portfolio/gallery/Budweiser.jpg" alt="Budweiser bottle with floating cap" class="lazyload">
                  <a href="#modal-04" class="overlay">
                     <div class="folio-item-table">
                      <div class="folio-item-cell">
@@ -152,7 +152,7 @@
 
            <div class="bgrid folio-item">
               <div class="item-wrap">
-               <img src="images\portfolio\gallery\Nivea.jpg" alt="Nivea men flatlay" class="lazyload">
+               <img src="images/portfolio/gallery/Nivea.jpg" alt="Nivea men flatlay" class="lazyload">
                  <a href="#modal-06" class="overlay">
                     <div class="folio-item-table">
                      <div class="folio-item-cell">
@@ -168,7 +168,7 @@
 
            <div class="bgrid folio-item">
                 <div class="item-wrap">
-                 <img src="images\portfolio\gallery\Skatedeck_challenge.jpg" alt="dentiti baseball cap" class="lazyload">
+                 <img src="images/portfolio/gallery/Skatedeck_challenge.jpg" alt="dentiti baseball cap" class="lazyload">
                    <a href="#modal-01" class="overlay">
                       <div class="folio-item-table">
                        <div class="folio-item-cell">
@@ -187,7 +187,7 @@
 
              <div class="bgrid folio-item">
                 <div class="item-wrap">
-                 <img src="images\portfolio\gallery\Schweppes.jpg"alt="hand holding glass of Schweppes" class="lazyload">
+                 <img src="images/portfolio/gallery/Schweppes.jpg" alt="hand holding glass of Schweppes" class="lazyload">
                    <a href="#modal-02" class="overlay">
                       <div class="folio-item-table">
                        <div class="folio-item-cell">
@@ -203,7 +203,7 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
-                <img src="images\portfolio\gallery\selfie.jpg"alt="Dangote Pasta Pack ad" class="lazyload">
+                <img src="images/portfolio/gallery/selfie.jpg" alt="Dangote Pasta Pack ad" class="lazyload">
                   <a href="#modal-03" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
@@ -263,7 +263,7 @@
          <div id="modal-03" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\dangote-selfie-m.jpg" alt="" class="lazyload">
+              <img src="images/portfolio/modals/dangote-selfie-m.jpg" alt="" class="lazyload">
             </div>
 
            <div class="description-box">
@@ -283,7 +283,7 @@
          <div id="modal-04" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\Budweiser-m.jpg" alt="budweiser label collage" class="lazyload">
+              <img src="images/portfolio/modals/Budweiser-m.jpg" alt="budweiser label collage" class="lazyload">
             </div>
 
            <div class="description-box">
@@ -323,7 +323,7 @@
          <div id="modal-06" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\nivea-m.jpg" alt="flatlay" class="lazyload">
+              <img src="images/portfolio/modals/nivea-m.jpg" alt="flatlay" class="lazyload">
             </div>
 
            <div class="description-box">
